--- a/transacoes/build.gradle
+++ b/transacoes/build.gradle
@@ -16,6 +16,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
+	runtimeOnly 'com.h2database:h2'
 }
 
 test {
