--- a/transacoes/build.gradle
+++ b/transacoes/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
 	runtimeOnly 'com.h2database:h2'
+	testImplementation 'junit:junit:4.13.2'
+	
 }
 
 test {
