--- a/transacoes/src/main/resources/application.properties
+++ b/transacoes/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#Server
+server.port=8090
 
+# Database
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+spring.datasource.username=V2R010AC
+spring.datasource.password=msaf
