Ajuste Encoding e Propriedade para incluir a reason no retorno da exceção

--- a/transacoes/src/main/resources/application.properties
+++ b/transacoes/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Server
 server.port=8090
+server.error.include-message=always
 
 # Database
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
