Propriedade para não logar o stacktrace no responde

--- a/transacoes/src/main/resources/application.properties
+++ b/transacoes/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #Server
 server.port=8090
 server.error.include-message=always
+server.error.include-stacktrace=never
 
 # configuração de acesso banco em memory H2
 spring.jpa.hibernate.ddl-auto=create
