--- a/transacoes/build.gradle
+++ b/transacoes/build.gradle
@@ -21,6 +21,10 @@ dependencies {
 	implementation 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'junit:junit:4.13.2'
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	
+	
 	
 }
 
